google api o show addresses

--- a/merchandise.web/src/main/webapp/resources/person/viewPerson_de.properties
+++ b/merchandise.web/src/main/webapp/resources/person/viewPerson_de.properties
@@ -11,7 +11,8 @@ view_person_reference_prefix=Aktenzeichen
 view_person_court_prefix=Amtsgericht
 view_person_customer=Kunde
 
-
+view_person_address_headline=Kontakte und Addressen
+view_person_contact_headline=Kontakte
 
 view_person_name=Name
 view_person_nativity=Geburt 
