--- a/merchandise.web/src/main/webapp/resources/person/viewPerson_de.properties
+++ b/merchandise.web/src/main/webapp/resources/person/viewPerson_de.properties
@@ -18,3 +18,8 @@ view_person_name=Name
 view_person_nativity=Geburt 
 
 
+geo_coding_error_deviation=Addresse zu ungenau
+geo_coding_error_status=Fehler bei Geokodierungabfrage
+geo_coding_error_multiple=Addresse ist mehrdeutig
+
+
