Refactoring RgistrationWizardController the second

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -34,6 +34,8 @@ register_common_type_user=neuer Benutzer zu einem bestehendem Kunden
 
 register_person_headline=Kundendaten, Adressen und Kontaktdaten
 register_person_tab=Kunde
+customer_not_found=Kunde nicht vorhanden
+
 
 register_overview_tab=Übersicht
 register_overview_headline=Anzeige der Daten, Registrierung absenden
