ConstraintviolationException special case within SimpleFacesExceptionTranslater

--- a/merchandise.web/src/main/resources/ValidationMessages_de.properties
+++ b/merchandise.web/src/main/resources/ValidationMessages_de.properties
@@ -2,3 +2,7 @@ mandatory_field=Mu\u00DFfeld
 wrong_password=4-8 Zeichen
 plz_field=5 Ziffern
 positiv_number=ganze Zahl
+
+missing_address_coordinates=Mindestens eine Addresse mit Geokoordinaten mu\u00D vorhanden sein
+
+missing_login_contact=Mindestens ein Login Kontakt mu\u00D vorhanden sein 
