--- a/merchandise.web/src/main/resources/ValidationMessages_de.properties
+++ b/merchandise.web/src/main/resources/ValidationMessages_de.properties
@@ -3,6 +3,6 @@ wrong_password=4-8 Zeichen
 plz_field=5 Ziffern
 positiv_number=ganze Zahl
 
-missing_address_coordinates=Mindestens eine Addresse mit Geokoordinaten mu\u00D vorhanden sein
+missing_address_coordinates=Mindestens eine Addresse mit Geokoordinaten mu\u00DF vorhanden sein
 
-missing_login_contact=Mindestens ein Login Kontakt mu\u00D vorhanden sein 
+missing_login_contact=Mindestens ein Login Kontakt mu\u00DF vorhanden sein 
