some shit to make it run

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -42,3 +42,6 @@ register_overview_headline=Anzeige der Daten, Registrierung absenden
 
 register_overview_submit=speichern
 
+
+register_dupplicate_login_contact=Ein Login wird bereits benutzt
+
