Exception if user already assigned, translate it to a bundle message

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -45,3 +45,5 @@ register_overview_submit=speichern
 
 register_dupplicate_login_contact=Ein Login wird bereits benutzt
 
+register_person_already_assigned=Eine identische Person ist dem Kunden bereits zugeordnet
+
