Login with TableModel for customer selection

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -14,14 +14,17 @@ login_password_tt=Kunden-Passwort aus den Kontaktdaten
 login_rgister_button_tt=Login erstellen,falls nicht vorhanden
 login_login_button_tt=Zugang zum System
 
+login_select_customer_button_tt=Zugang zum System, mit ausgewähltem Kunden
+
 login_customer_select=Kunde auswählen
 
-login_customers_tt=Kunde in dessen Auftrag Sie arbeiten
 
 login_user_not_found=Benutzer nicht vorhanden
 login_invalid_password=Password ist ungültig
 login_logoff=abmelden
 login_abort_tt=Anmeldevorgang abbrechen, abmelden
+login_customer_mandatory=Kunde muß ausgewählt sein
+
 
 
 register_next=weiter 
