templating, subjects, paging , getting started

--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -40,3 +40,14 @@ register_overview_tab=overview
 register_overview_headline=display data, submit registration
 
 register_overview_submit=save
+
+
+menu_file=File
+menu_file_quit=logout
+menu_edit=edit
+menu_edit_subjects=products and services
+
+
+
+overview_headline=overviewpage
+subjects_headline=products and  services
