--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -14,21 +14,21 @@ login_password_tt=Kunden-Passwort aus den Kontaktdaten
 login_rgister_button_tt=Login erstellen,falls nicht vorhanden
 login_login_button_tt=Zugang zum System
 
-login_select_customer_button_tt=Zugang zum System, mit ausgewähltem Kunden
+login_select_customer_button_tt=Zugang zum System, mit ausgew\u00e4hltem Kunden
 
-login_customer_select=Kunde auswählen
+login_customer_select=Kunde ausw\u00e4hlen
 
 
 login_user_not_found=Benutzer nicht vorhanden
-login_invalid_password=Password ist ungültig
+login_invalid_password=Password ist ung\u00fcltig
 login_logoff=abmelden
 login_abort_tt=Anmeldevorgang abbrechen, abmelden
-login_customer_mandatory=Kunde muß ausgewählt sein
+login_customer_mandatory=Kunde mu\u00df ausgew\u00e4hlt sein
 
 
 
 register_next=weiter 
-register_back=zurück 
+register_back=zur\u00fcck 
 
 register_common_tab=Allgemein 
 register_common_headline=Art der Registrierung, Land und Sprache  
@@ -37,7 +37,7 @@ register_common_language=Sprache
 register_common_type=Registerungsart
 
 
-register_common_type_naturalperson=neuer Kunde als natürliche Person
+register_common_type_naturalperson=neuer Kunde als nat\u00fcrliche Person
 register_common_type_legalperson=neuer Kunde als juristische Person
 register_common_type_user=neuer Benutzer zu einem bestehendem Kunden
 
@@ -46,7 +46,7 @@ register_person_tab=Kunde
 customer_not_found=Kunde nicht vorhanden
 
 
-register_overview_tab=Übersicht
+register_overview_tab=\u00dcbersicht
 register_overview_headline=Anzeige der Daten, Registrierung absenden
 
 register_overview_submit=speichern
@@ -55,4 +55,18 @@ register_overview_submit=speichern
 register_dupplicate_login_contact=Ein Login wird bereits benutzt
 
 register_person_already_assigned=Eine identische Person ist dem Kunden bereits zugeordnet
+
+
+
+menu_file=Datei
+menu_file_quit=abmelden
+menu_edit=Bearbeiten
+menu_edit_overview=\u00dcbersicht
+menu_edit_subjects=Produkte und Dienste
+
+
+
+overview_headline=\u00dcbersichtsseite
+subjects_headline=Produkte und Dienste
+
 
