--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -68,7 +68,12 @@ menu_edit_subjects=Produkte und Dienste
 
 overview_headline=\u00DCbersichtsseite
 subjects_headline=Produkte und Dienste
+subjects_search_label=Produkt- Servicename
+subjects_page_prefix=Seite 
 
-subject_add_button=hinzuf\u00fcgen
-subject_change_button=\u00e4ndern	
-subject_delete_button=l\u00f6schen	
+subjects_table_column_name=Name
+subjects_table_column_description=Beschreibung
+
+subject_add_button=hinzuf\u00FCgen
+subject_change_button=\u00E4ndern\t
+subject_delete_button=l\u00F6schen\t
