Mapping Opportinity, OpportunityAO and Opportunities page

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -63,6 +63,7 @@ menu_file_quit=abmelden
 menu_edit=Bearbeiten
 menu_edit_overview=\u00DCbersicht
 menu_edit_subjects=Produkte und Dienste
+menu_edit_opportunities=Konditionen
 
 
 
@@ -77,3 +78,13 @@ subjects_table_column_description=Beschreibung
 subject_add_button=hinzuf\u00FCgen
 subject_change_button=\u00E4ndern\t
 subject_delete_button=l\u00F6schen\t
+
+
+opportunities_headline=Ver\u00F6ffentlichte Produkte und Dienste mit Kommerziellen Bedindungen
+opportunities_search_label=Name
+opportunities_page_prefix=Seite 
+
+opportunities_table_column_name=Name
+opportunities_table_column_description=Beschreibung
+
+opportunities_add_button=hinzuf\u00FCgen
