opportunity page, removing shit

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -88,3 +88,10 @@ opportunities_table_column_name=Name
 opportunities_table_column_description=Beschreibung
 
 opportunities_add_button=hinzuf\u00FCgen
+
+
+opportunity_headline=Opportunity bearbeiten
+
+opportunity_name=Name
+
+opportunity_description=Beschreibung
