--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -95,3 +95,10 @@ opportunity_headline=Opportunity bearbeiten
 opportunity_name=Name
 
 opportunity_description=Beschreibung
+
+opportunity_kind_product=Produkt oder Dienstleistung
+opportunity_kind_offer=Angebot
+opportunity_kind_tender=Ausschreibung
+opportunity_activities=Aktivitaet
+
+opportunity_save=speichern
