first trial ajaxlistener to make tree working

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -96,9 +96,11 @@ opportunity_name=Name
 
 opportunity_description=Beschreibung
 
+opportunity_kind=Art der Opportunity
+
 opportunity_kind_product=Produkt oder Dienstleistung
 opportunity_kind_offer=Angebot
 opportunity_kind_tender=Ausschreibung
-opportunity_activities=Aktivitaet
+opportunity_activities=Aktivit\u00E4t
 
 opportunity_save=speichern
