productClassifications + activityClassificatons using backend services

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -101,6 +101,8 @@ opportunity_kind=Art der Opportunity
 opportunity_kind_product=Produkt oder Dienstleistung
 opportunity_kind_offer=Angebot
 opportunity_kind_tender=Ausschreibung
-opportunity_activities=Aktivit\u00E4t
+opportunity_activities=Aktivit\u00E4ten-Kategorie
+
+opportunity_products=Produkt-Kategorie
 
 opportunity_save=speichern
