KeyWords added to opportunity page

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -103,6 +103,9 @@ opportunity_kind_offer=Angebot
 opportunity_kind_tender=Ausschreibung
 opportunity_activities=Aktivit\u00E4ten-Kategorie
 
+opportunity_keyword=Schlagw\u00F6rter
+keyword_table_column_name=Suchbegriffe
+
 opportunity_products=Produkt-Kategorie
 
 opportunity_save=speichern
