--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -104,7 +104,14 @@ opportunity_kind_tender=Ausschreibung
 opportunity_activities=Aktivit\u00E4ten-Kategorie
 
 opportunity_keyword=Schlagw\u00F6rter
-keyword_table_column_name=Suchbegriffe
+opportunity_keyword_table_column_name=Suchbegriffe
+
+opportunity_keyword_add=hinzuf\u00FCgen
+opportunity_keyword_delete=l\u00F6schen
+
+opportunity_keyword_input_title=Schuchbegriff hinzuf\u00FCgen
+opportunity_keyword_input_label=Schlagwort
+opportunity_keyword_input_submit_text=hinzuf\u00FCgen
 
 opportunity_products=Produkt-Kategorie
 
