Begin Products + Conditions with a tree

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -113,6 +113,6 @@ opportunity_keyword_input_title=Schuchbegriff hinzuf\u00FCgen
 opportunity_keyword_input_label=Schlagwort
 opportunity_keyword_input_submit_text=hinzuf\u00FCgen
 
-opportunity_products=Produkt-Kategorie
+opportunity_products=Produkte und Konditionen
 
 opportunity_save=speichern
