navigation add products to commercial conditions of an opportunity ...

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -79,6 +79,9 @@ subject_add_button=hinzuf\u00FCgen
 subject_change_button=\u00E4ndern\t
 subject_delete_button=l\u00F6schen\t
 
+subject_ok_button=hinzuf\u00FCgen
+subject_cancel_button=abbrechen
+
 
 opportunities_headline=Ver\u00F6ffentlichte Produkte und Dienste mit Kommerziellen Bedindungen
 opportunities_search_label=Name
@@ -114,5 +117,7 @@ opportunity_keyword_input_label=Schlagwort
 opportunity_keyword_input_submit_text=hinzuf\u00FCgen
 
 opportunity_products=Produkte und Konditionen
+
+opportunity_add_subject=Produkt hinzuf\u00FCgen
 
 opportunity_save=speichern
