--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -120,4 +120,6 @@ opportunity_products=Produkte und Konditionen
 
 opportunity_add_subject=Produkt hinzuf\u00FCgen
 
+opportunity_condition_add=Kondition hinzuf\u00FCgen
+
 opportunity_save=speichern
