--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -76,8 +76,8 @@ subjects_table_column_name=Name
 subjects_table_column_description=Beschreibung
 
 subject_add_button=hinzuf\u00FCgen
-subject_change_button=\u00E4ndern\t
-subject_delete_button=l\u00F6schen\t
+subject_change_button=\u00E4ndern
+subject_delete_button=l\u00F6schen
 
 subject_ok_button=hinzuf\u00FCgen
 subject_cancel_button=abbrechen
