--- a/merchandise.web/src/main/webapp/resources/condition/condition_de.properties
+++ b/merchandise.web/src/main/webapp/resources/condition/condition_de.properties
@@ -13,3 +13,5 @@ condition_values=Zul\u00E4ssige Werte
 
 condition_permitted_value_table_column=Eingabewerte
 condition_value_add=hinzuf\u00FCgen
+
+condition_value_delete=l\u00F6schen
