delete subjects and conditions from opportunity

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -122,4 +122,6 @@ opportunity_add_subject=Produkt hinzuf\u00FCgen
 
 opportunity_condition_add=Kondition hinzuf\u00FCgen
 
+opportunity_delete_condition=l\u00F6schen
+
 opportunity_save=speichern
