Coverage change on OpportunityController + ajax changeButton, cancelButton opportunity

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -92,6 +92,8 @@ opportunities_table_column_description=Beschreibung
 
 opportunities_add_button=hinzuf\u00FCgen
 
+opportunities_change_button=\u00E4ndern
+
 
 opportunity_headline=Opportunity bearbeiten
 
@@ -125,3 +127,4 @@ opportunity_condition_add=Kondition hinzuf\u00FCgen
 opportunity_delete_condition=l\u00F6schen
 
 opportunity_save=speichern
+opportunity_cancel=abbrechen
