Upload will be its own dialog. It will be used with filesystems or couchdb or what ever

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -94,6 +94,9 @@ opportunities_add_button=hinzuf\u00FCgen
 
 opportunities_change_button=\u00E4ndern
 
+opportunities_delete_button=l\u00F6schen
+opportunities_document_button=Anh\u00E4nge
+
 
 opportunity_headline=Opportunity bearbeiten
 
