--- a/merchandise.web/src/main/webapp/resources/document/document_de.properties
+++ b/merchandise.web/src/main/webapp/resources/document/document_de.properties
@@ -2,3 +2,7 @@ document_title=Attachements bearbeiten
 
 document_attachements=vorhandene Attachements
 document_delete_button=l\u00F6schen
+
+document_web_link_label=Web-Link
+
+document_add_link_button=hinzuf\u00FCgen
