--- a/merchandise.web/src/main/webapp/resources/document/document_de.properties
+++ b/merchandise.web/src/main/webapp/resources/document/document_de.properties
@@ -6,3 +6,5 @@ document_delete_button=l\u00F6schen
 document_web_link_label=Web-Link
 
 document_add_link_button=hinzuf\u00FCgen
+
+show_document_title=Atachement anzeigen
