change js document crap dialogs to pages

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -131,3 +131,14 @@ opportunity_delete_condition=l\u00F6schen
 
 opportunity_save=speichern
 opportunity_cancel=abbrechen
+
+document_title=Attachements bearbeiten
+
+document_attachements=vorhandene Attachements
+document_delete_button=l\u00F6schen
+
+document_web_link_label=Web-Link
+
+document_add_link_button=hinzuf\u00FCgen
+
+show_document_title=Atachement anzeigen
