cosmetics layout document i18n

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -142,3 +142,19 @@ document_web_link_label=Web-Link
 document_add_link_button=hinzuf\u00FCgen
 
 show_document_title=Atachement anzeigen
+
+
+document_show_button=anzeigen
+
+
+
+document_upload_button=Datei
+
+document_wrong_file_message=Falscher Datei-Typ
+
+document_invalid_size_message=Datei ist zu gross
+document_cancel_button=zur\u00FCck 
+
+
+
+
