--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -81,7 +81,7 @@ subject_delete_button=l\u00F6schen
 
 subject_ok_button=hinzuf\u00FCgen
 subject_cancel_button=abbrechen
-
+subjects_document_button=Anh\u00E4nge
 
 opportunities_headline=Ver\u00F6ffentlichte Produkte und Dienste mit Kommerziellen Bedindungen
 opportunities_search_label=Name
