fullTextSerchPage the beginning

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -64,6 +64,8 @@ menu_edit=Bearbeiten
 menu_edit_overview=\u00DCbersicht
 menu_edit_subjects=Produkte und Dienste
 menu_edit_opportunities=Konditionen
+menu_order=Bestellung
+menu_order_opportunity_search=Waren suchen
 
 
 
@@ -154,6 +156,9 @@ document_wrong_file_message=Falscher Datei-Typ
 
 document_invalid_size_message=Datei ist zu gross
 document_cancel_button=zur\u00FCck 
+
+
+opportunity_search_headline=Waren suchen
 
 
 
