--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -64,6 +64,7 @@ menu_edit=Bearbeiten
 menu_edit_overview=\u00DCbersicht
 menu_edit_subjects=Produkte und Dienste
 menu_edit_opportunities=Konditionen
+menu_edit_rules=Regeln
 menu_order=Bestellung
 menu_order_opportunity_search=Waren suchen
 
@@ -160,6 +161,21 @@ document_cancel_button=zur\u00FCck
 
 opportunity_search_headline=Waren suchen
 
+rules_headline=Regeln (Validatoren, Converter)
+rules_table_column_name=Name
+rules_table_column_state=Status
+rules_page_prefix=Seite
+rules_search_label=Name
+rules_search_button=suchen
 
+rules_change_button=\u00E4ndern
+
+rule_headline=Regel bearbeiten
+
+rule_not_found=Regel nicht vorhanden
+
+
+rule_id=Resource-Id
+rule_name=Name
 
 
