Reule pages sttae etc

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -177,5 +177,8 @@ rule_not_found=Regel nicht vorhanden
 
 rule_id=Resource-Id
 rule_name=Name
+rule_state=Status
+rule_state_active=aktiv
+rule_state_deactive=deaktiv
 rule_cancel_button=zur\u00FCck 
 rule_save_button=speichern 
