--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -180,5 +180,9 @@ rule_name=Name
 rule_state=Status
 rule_state_active=aktiv
 rule_state_deactive=deaktiv
+rule_source=Sourcecode
+rule_file=Datei
+rule_file_header=Dateiname
+rule_url_header=url
 rule_cancel_button=zur\u00FCck 
 rule_save_button=speichern 
