FileDownload for source

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -181,8 +181,8 @@ rule_state=Status
 rule_state_active=aktiv
 rule_state_deactive=deaktiv
 rule_source=Sourcecode
-rule_file=Datei
-rule_file_header=Dateiname
-rule_url_header=url
+
+rule_upload=Datei hochladen
+
 rule_cancel_button=zur\u00FCck 
 rule_save_button=speichern 
