Add rules to conditions

--- a/merchandise.web/src/main/webapp/resources/condition/condition_de.properties
+++ b/merchandise.web/src/main/webapp/resources/condition/condition_de.properties
@@ -7,8 +7,8 @@ condition_type_quantity=Anzahl
 condition_type_unit=Einheit
 
 
-condition_validation=Validierungsregel
-condition_calculation=Berechnungsalgorithmus
+condition_rules=Regeln
+
 condition_values=Zul\u00E4ssige Werte
 
 condition_permitted_value_table_column=Eingabewerte
@@ -17,3 +17,5 @@ condition_value_add=hinzuf\u00FCgen
 condition_product=Product
 
 condition_value_delete=l\u00F6schen
+
+
