--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -132,6 +132,8 @@ opportunity_condition_add=Kondition hinzuf\u00FCgen
 
 opportunity_delete_condition=l\u00F6schen
 
+opportunity_edit_rule=Regel bearbeiten
+
 opportunity_save=speichern
 opportunity_cancel=abbrechen
 
