--- a/merchandise.web/src/main/webapp/resources/ruleInstance/ruleInstance_de.properties
+++ b/merchandise.web/src/main/webapp/resources/ruleInstance/ruleInstance_de.properties
@@ -2,3 +2,4 @@ rule_instance_title=Parametrisierte Regel
 rule_instance_rules=Regel ausw\u00E4hlen
 rule_instance_cancel=zur\u00FCck 
 rule_instance_invalid_rule=Regel fehlerhaft
+rule_instance_add_parameter=add
