--- a/merchandise.web/src/main/webapp/resources/ruleInstance/ruleInstance_de.properties
+++ b/merchandise.web/src/main/webapp/resources/ruleInstance/ruleInstance_de.properties
@@ -3,4 +3,16 @@ rule_instance_rules=Regel ausw\u00E4hlen
 rule_instance_cancel=zur\u00FCck 
 rule_instance_invalid_rule=Regel fehlerhaft
 rule_instance_add_parameter=hinzuf\u00FCgen
+rule_instance_delete_parameter=loeschen
 rule_instances=Vorhandene Regeln
+
+
+ruletable_parameters=Parameter
+ruletable_name=Regel
+ruletable_priority=Priorit\u00E4t
+
+
+parametertable_name=Name
+parametertable_value=Wert
+
+rule_priority=Priorit\u00E4t
