--- a/merchandise.web/src/main/webapp/resources/condition/condition_de.properties
+++ b/merchandise.web/src/main/webapp/resources/condition/condition_de.properties
@@ -5,6 +5,9 @@ condition_title=Kondition bearbeiten
 condition_type_price_per_unit=Preis pro Einheit
 condition_type_quantity=Anzahl
 condition_type_unit=Einheit
+condition_type_product=Produkt
+condition_type_currency=W\u00E4hrung
+condition_type_quality=Qualit\u00E4t
 
 
 condition_rules=Regeln
