InputType for conditions

--- a/merchandise.web/src/main/webapp/resources/condition/condition_de.properties
+++ b/merchandise.web/src/main/webapp/resources/condition/condition_de.properties
@@ -9,6 +9,9 @@ condition_type_product=Produkt
 condition_type_currency=W\u00E4hrung
 condition_type_quality=Qualit\u00E4t
 
+input_type_user=Benutzereingabe
+input_type_calculation=Berechneter Wert
+
 
 condition_rules=Regeln
 
