--- a/merchandise.web/src/main/resources/messages.properties
+++ b/merchandise.web/src/main/resources/messages.properties
@@ -1,2 +1,8 @@
 subject_search_name=Name
 subject_search_description=Beschreibung
+subject_search_button=suchen
+subject_search_headline=Produkt-Template suchen
+subject_table_headline=Vorhandene Produkt-Templates
+subject_table_name=Name
+subject_table_description=Beschreibung
+subject_table_dateCreated=Erstellungsdatum
