--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -1,2 +1,8 @@
-subject_search_name=Name
-subject_search_description=Description
+subject_search_name=name
+subject_search_description=description
+subject_search_button=search
+subject_search_headline=product template search
+subject_table_headline=existing product templates
+subject_table_name=name
+subject_table_description=description
+subject_table_dateCreated=creation date
