--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -6,3 +6,12 @@ subject_table_headline=Vorhandene Produkt-Templates
 subject_table_name=Name
 subject_table_description=Beschreibung
 subject_table_dateCreated=Erstellungsdatum
+
+subject_save_button=speichern
+subject_new_button=neu
+subject_delete_button=löschen
+
+
+subject_condition_table_conditionType=Eingabefeld
+subject_condition_table_dataType=Datentyp
+subject_condition_table_headline=Konditionen Eingabefelder
