--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -7,11 +7,19 @@ subject_table_name=Name
 subject_table_description=Beschreibung
 subject_table_dateCreated=Erstellungsdatum
 
+subject_description=Beschreibung
+subject_name=Name
+
+subject_subject_caption=Gegenstand
+
 subject_save_button=speichern
 subject_new_button=neu
 subject_delete_button=löschen
 
-
+subject_condition_table_caption=Eingabefelder
 subject_condition_table_conditionType=Eingabefeld
 subject_condition_table_dataType=Datentyp
-subject_condition_table_headline=Konditionen Eingabefelder
+subject_condition_caption=Konditionen
+
+subject_condition_dataType=Datentyp
+subject_condition_conditionType=Feldname
