--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -7,10 +7,16 @@ subject_table_name=name
 subject_table_description=description
 subject_table_dateCreated=creation date
 
+subject_description=description
+subject_name=name
+
+subject_subject_caption=subject
+
 subject_save_button=save
 subject_new_button=new
 subject_delete_button=delete
 
+subject_condition_table_caption=inputfields
 subject_condition_table_conditionType=inputfield
 subject_condition_table_dataType=datatype
-subject_condition_table_headline=conditions inputfields
+subject_condition_caption=conditions
