--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -23,3 +23,5 @@ subject_condition_caption=Konditionen
 
 subject_condition_dataType=Datentyp
 subject_condition_conditionType=Feldname
+
+jsr303_mandatory=Mußfeld: Eingabe erforderlich
