--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -20,3 +20,12 @@ subject_condition_table_caption=inputfields
 subject_condition_table_conditionType=inputfield
 subject_condition_table_dataType=datatype
 subject_condition_caption=conditions
+
+subject_condition_dataType=datatype
+subject_condition_conditionType=fieldname
+
+jsr303_mandatory=mandatory: input requires
+jsr303_subject_name_size=min. 5, max. 20 characters  
+jsr303_subject_desc_size=max. 50 characters
+jsr303_condition_conditionType_size=min. 1, max. 20 characters 
+subject_condition_exists=inputfield {0} already exists
