--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -12,6 +12,7 @@ subject_name=Name
 
 subject_subject_caption=Gegenstand
 
+subject_condition_save_button=speichern
 subject_save_button=speichern
 subject_new_button=neu
 subject_delete_button=löschen
