--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -12,6 +12,7 @@ subject_name=name
 
 subject_subject_caption=subject
 
+subject_condition_save_button=speichern
 subject_save_button=save
 subject_new_button=new
 subject_delete_button=delete
