--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -16,6 +16,7 @@ subject_condition_save_button=speichern
 subject_save_button=speichern
 subject_new_button=neu
 subject_delete_button=löschen
+subject_condition_delete_button=löschen
 
 subject_condition_table_caption=Eingabefelder
 subject_condition_table_conditionType=Eingabefeld
