--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -15,6 +15,7 @@ subject_subject_caption=Gegenstand
 subject_condition_save_button=speichern
 subject_save_button=speichern
 subject_new_button=neu
+subject_condition_new_button=neu
 subject_delete_button=löschen
 subject_condition_delete_button=löschen
 
