--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -15,7 +15,9 @@ subject_subject_caption=subject
 subject_condition_save_button=speichern
 subject_save_button=save
 subject_new_button=new
+subject_condition_new_button=new
 subject_delete_button=delete
+subject_condition_delete_button=delete
 
 subject_condition_table_caption=inputfields
 subject_condition_table_conditionType=inputfield
