--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -32,3 +32,10 @@ jsr303_subject_name_size=Min. 5, max. 20 Zeichen
 jsr303_subject_desc_size=Max. 50 Zeichen
 jsr303_condition_conditionType_size=Min. 1, max. 20 Zeichen 
 subject_condition_exists=Eingabefeld {0} existiert bereits
+
+
+menu_product=Produkt
+
+menu_product_template=Templates
+
+menu_product_definition=Definition
