MainMenuBar als 2 SessionBeans

--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -32,3 +32,10 @@ jsr303_subject_name_size=min. 5, max. 20 characters
 jsr303_subject_desc_size=max. 50 characters
 jsr303_condition_conditionType_size=min. 1, max. 20 characters 
 subject_condition_exists=inputfield {0} already exists
+
+
+menu_product=product
+
+menu_product_template=templates
+
+menu_product_definition=definitions
