--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -31,7 +31,22 @@ jsr303_mandatory=Mußfeld: Eingabe erforderlich
 jsr303_subject_name_size=Min. 5, max. 20 Zeichen  
 jsr303_subject_desc_size=Max. 50 Zeichen
 jsr303_condition_conditionType_size=Min. 1, max. 20 Zeichen 
+
+jsr303_commercial_subject_name_size=Min. 5, max. 30 Zeichen  
+
 subject_condition_exists=Eingabefeld {0} existiert bereits
+
+
+commercial_subject_name=Name
+commercial_subject_search_name=Name
+commercial_subject_search_item_name=Position
+commercial_subject_search=suchen
+commercial_subject_save=speichern
+commercial_subject_new=neu
+commercial_subject_delete=löschen
+
+commercial_subject_table_name=Name
+
 
 
 menu_product=Produkt
