--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -34,6 +34,17 @@ jsr303_condition_conditionType_size=min. 1, max. 20 characters
 subject_condition_exists=inputfield {0} already exists
 
 
+commercial_subject_name=name
+commercial_subject_search_name=name
+commercial_subject_search_item_name=item
+commercial_subject_search=search
+commercial_subject_save=save
+commercial_subject_new=new
+commercial_subject_delete=remove
+commercial_subject_table_name=name
+
+
+
 menu_product=product
 
 menu_product_template=templates
