--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -54,3 +54,5 @@ menu_product=Produkt
 menu_product_template=Templates
 
 menu_product_definition=Definitionen
+
+jsr303_commercial_subject_item_name_size=Min. 5, max. 30 Zeichen
