--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -47,7 +47,14 @@ commercial_subject_delete=löschen
 
 commercial_subject_table_name=Name
 
+commercial_subject_mandatoryBox_true=Ja
+commercial_subject_mandatoryBox_false=Nein
 
+commercial_subject_save_item_button=speichern
+
+commercial_subject_new_item_button=neu
+commercial_subject_delete_item_button=löschen
+commercial_subject_item_table_name=Position
 
 menu_product=Produkt
 
