--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -44,6 +44,14 @@ commercial_subject_delete=remove
 commercial_subject_table_name=name
 
 
+commercial_subject_mandatoryBox_true=yes
+commercial_subject_mandatoryBox_false=no
+
+commercial_subject_save_item_button=save
+commercial_subject_new_item_button=new
+commercial_subject_delete_item_button=remove
+commercial_subject_item_table_name=position
+
 
 menu_product=product
 
