--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -56,6 +56,12 @@ commercial_subject_new_item_button=neu
 commercial_subject_delete_item_button=löschen
 commercial_subject_item_table_name=Position
 
+commercial_subject_item_name=Position
+commercial_subject_item_mandatory=Mußfeld
+
+commercial_subject_item_subject=Produkt
+
+
 menu_product=Produkt
 
 menu_product_template=Templates
