--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -24,6 +24,12 @@ subject_condition_table_conditionType=inputfield
 subject_condition_table_dataType=datatype
 subject_condition_caption=conditions
 
+commercial_subject_item_name=item
+commercial_subject_item_mandatory=mandatory
+
+commercial_subject_item_subject=product
+
+
 subject_condition_dataType=datatype
 subject_condition_conditionType=fieldname
 
