--- a/merchandise.web/src/main/resources/messages_en.properties
+++ b/merchandise.web/src/main/resources/messages_en.properties
@@ -39,7 +39,7 @@ jsr303_subject_desc_size=max. 50 characters
 jsr303_condition_conditionType_size=min. 1, max. 20 characters 
 subject_condition_exists=inputfield {0} already exists
 
-
+jsr303_input_value=min. 1, max. 50 characters, no Whitespace
 commercial_subject_name=name
 commercial_subject_search_name=name
 commercial_subject_search_item_name=item
