--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -28,6 +28,7 @@ subject_condition_dataType=Datentyp
 subject_condition_conditionType=Feldname
 
 jsr303_mandatory=Mußfeld: Eingabe erforderlich
+jsr303_input_value=Min. 1, max. 50 Zeichen, kein Whitespace
 jsr303_subject_name_size=Min. 5, max. 20 Zeichen  
 jsr303_subject_desc_size=Max. 50 Zeichen
 jsr303_condition_conditionType_size=Min. 1, max. 20 Zeichen 
