Errormessage invadid type

--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -62,7 +62,7 @@ commercial_subject_item_mandatory=Mußfeld
 
 commercial_subject_item_subject=Produkt
 
-
+commercial_subject_conversion_error=Wert ist üngültig: Typ {0} erwartet.
 menu_product=Produkt
 
 menu_product_template=Templates
