--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -63,6 +63,8 @@ commercial_subject_item_mandatory=Mußfeld
 commercial_subject_item_subject=Produkt
 
 commercial_subject_conversion_error=Wert ist üngültig: Typ {0} erwartet.
+
+commercial_subject_value_table=Werteauswahl ({0})
 menu_product=Produkt
 
 menu_product_template=Templates
