--- a/merchandise.web/src/main/resources/messages_de.properties
+++ b/merchandise.web/src/main/resources/messages_de.properties
@@ -24,6 +24,7 @@ subject_condition_table_conditionType=Eingabefeld
 subject_condition_table_dataType=Datentyp
 subject_condition_caption=Konditionen
 
+
 subject_condition_dataType=Datentyp
 subject_condition_conditionType=Feldname
 
@@ -41,12 +42,19 @@ subject_condition_exists=Eingabefeld {0} existiert bereits
 commercial_subject_name=Name
 commercial_subject_search_name=Name
 commercial_subject_search_item_name=Position
+
+
+commercial_subject_table_name=Vorhandene Produkt-Definitionen
+commercial_subject_table_col_name=Produktname
 commercial_subject_search=suchen
 commercial_subject_save=speichern
 commercial_subject_new=neu
 commercial_subject_delete=löschen
+commercial_subject_condition=Konditionen
+commercial_subject_condition_value=Wert
 
-commercial_subject_table_name=Name
+commercial_subject_condition_value_save=speichern
+commercial_subject_condition_value_delete=löschen
 
 commercial_subject_mandatoryBox_true=Ja
 commercial_subject_mandatoryBox_false=Nein
